infrastructure/bootstrap/infrastructure/forgejo/controller/overlays/fundament-poc/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  annotations:
    # Anders dan de sandbox, die een geïmporteerd wildcard-cert gebruikt, laten we
    # cert-manager hier een certificaat halen. Zie issuer-letsencrypt.yaml.
    cert-manager.io/issuer: letsencrypt-forgejo
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  rules:
  - host: forgejo.fundament-poc.rijksapp.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo
            port:
              number: 3000
  tls:
  - hosts:
    - forgejo.fundament-poc.rijksapp.dev
    secretName: forgejo-fundament-poc-tls
